# games

./: .gitmodules  README.md  breakout.p8  ducks-flan.p8
Marksman/: Justfile  Marksman.p8  _types.lua  game_log.p8l  main.lua  sprites.aseprite
Marksman/src/: camera.lua  map.lua
Marksman/src/entities/: arrow.lua  bow.lua  bullseye.lua  player.lua  spring.lua
Marksman/src/managers/: savefile.lua
Marksman/src/states/: game_state.lua  intro_state.lua
Marksman/src/utils/: graphics.lua  logger.lua  math.lua  physics.lua  print.lua
bevy/bevy-experiments/: Cargo.toml
bevy/bevy-experiments/src/: main.rs
bitsi/: making breakfast.bitsi
bitsy/: making breakfast.bitsy
ebiten/bitsy-clone-test/: Justfile  go.mod  go.sum  index.html  levels.go  main.go
ebiten/bitsy-clone-test/assets/: levels.ldtk  tiles.aseprite
ebiten/ebiten-template/: Taskfile.yml  go.mod  go.sum  main.go
ebiten/ebiten-template/scenes/: scenes.go
ebiten/high-fiver/: .gitignore  Justfile  arrow.go  go.mod  go.sum  main.go  player.go  process.go
ebiten/high-fiver/assets/: a-test-file.json  player.aseprite
ebiten/moto-tomo/: Taskfile.yml  debug.go  fader.go  go.mod  go.sum  ldtk_renderer.go  main.go  mobs.go  player.go  resources.go  spikes.go  story_fader.go
ebiten/moto-tomo/constants/: debug.go  no_debug.go  no_release.go  release.go
ebiten/moto-tomo/controller/: controller_manager.go
ebiten/moto-tomo/gmath/: game_math.go
ebiten/moto-tomo/logging/: logging.go
ebiten/moto-tomo/memory/: not_wasm_mem.go  wasm_mem.go
ebiten/stacking-blocks/: camera.go  go.mod  go.sum  player.go  stacks.go
ebiten/tower/: go.mod  main.go  player.go  stacks.go
flame/pixel_adveture/: README.md  pubspec.yaml
flame/pixel_adveture/.devcontainer/: devcontainer.json  postcreate.sh
foster/TestingFoster/: .gitignore  Game.cs  Program.cs  TestingFoster.csproj  TestingFoster.sln
heapsio/basic-heaps/: _base.hxml  build.dev.hxml  build.opengl.hxml  setup.hxml
love2d/fennel-pong/: conf.lua  controller.fnl  game-scene.fnl  intro-scene.fnl  logger.fnl  love-api.fnl  love2d-fnl-mock.fnl  main.lua  makefile  test-scene.fnl  utils-macros.fnl  utils.fnl  wrap.fnl
love2d/hx-love/: .editorconfig  build.dev.hxml  build.hxml
love2d/love2d-template/: conf.lua  globals.lua  input.lua  main.lua
love2d/rectangle-lover/: .luacheckrc  Archive.love  README.md  conf.lua  main.lua
love2d/sandbox/: color.lua  conf.lua  input.lua  main.lua  material_selector.lua  user_controller.lua
love2d/the-roris-collection/: .gitignore  .luacheckrc  README.md  Taskfile.yml  package-lock.json  package.json
love2d/the-roris-collection-typescript/: .eslintrc.json  .gitignore  .prettierrc.json  Taskfile.yml  package-lock.json  package.json  tsconfig.json
macroquad/macroquad-experiments/: Cargo.toml
macroquad/macroquad-experiments/src/: main.rs
marksman-p/: .gitignore  Justfile  main.lua  marksman.p8  sprites.aseprite
marksman-p/src/: camera.lua  map.lua  types.lua
pico8/: README.md  jumper.p8
pico8/farti/: farti.p8
pico8/hungry-cat/: _pico8api.lua  hungry-cat.lua  hungry-cat.p8
pico8/marksman-p/: Justfile  main.lua  marksman.p8
pico8/toy-train/: camera.lua  main.lua  map.lua  train.lua
pico8/tutorials/: cave_diver.p8  coroutines.p8  lander.p8
picotron/: .info.pod  roris.p64
picotron/desktop/: drive.loc  readme.txt
pixijs/rorisboard/: .gitignore  package-lock.json  package.json  shadow-cljs.edn
platformer/: Justfile  main.lua  platformer.p8
platformer/src/: arrow.lua  bow.lua  camera.lua  map.lua  player.lua
playplaymini/MiniPlayground/: .gitignore  MiniPlayground.csproj  MiniPlayground.sln  Program.cs  Taskfile.yml  app.manifest
quil/rorisboardq/: .gitignore  package-lock.json  package.json  shadow-cljs.edn
raylib/raylib-experiments/: .gitignore  CMakeLists.txt  Justfile
raylib/raylib-experiments/assets/: world.ldtk  world_old.ldtk
raylib/raylib-experiments/sources/: Constants.hpp  constants.cpp  main.cpp
raylib/raylib-experiments/sources/entities/: Player.cpp  Player.hpp
raylib/raylib-experiments/sources/entities/Player/: Player.cpp
raylib/raylib-experiments/sources/physics/: RaycastCallbacks.hpp
raylib/raylib-experiments/sources/scenes/: GameScene.cpp  GameScene.hpp  SceneManager.hpp  TitleScene.cpp  TitleScene.hpp
raylib/raylib-experiments/sources/scenes/GameScene/: GameScene.cpp  GameScene.hpp  LevelDefinitions.hpp
raylib/raylib-experiments/sources/scenes/TitleScene/: TitleScene.cpp
raylib/raylib-experiments/sources/screens/: BaseScreen.hpp  GameScreen.cpp  GameScreen.hpp  ScreenManager.hpp  Screens.hpp  TitleScreen.cpp  TitleScreen.hpp
raylib/raylib-experiments/sources/utils/: DebugUtils.hpp
raylib/raylib-odin-experiment/: main.odin  ols.json
raylib/raylib-zig-experiment/: .gitignore  Justfile  build.zig
rotjs/clorog/: .gitignore  README.md  package-lock.json  package.json  shadow-cljs.edn
tic80/: .gitignore  doggy.moon  doggyhx.lua
tic80/Doggy/: .gitignore  Justfile  build.hxml  debug.hxml  replace_code.py
tic80/roris-puff/: Taskfile.yml  build.zig.zon  game.wasmp
tic80/ruby_games/: .rubocop.yml  Gemfile  rubyone.rb
tic80/tiny_code_christmas/: day1.tic  day3-fennel.tic  day3.tic  day5.rb
tic80/zig_test/: .gitignore  Taskfile.yml  build.zig  build.zig.zon  game.wasmp
toy-train/: Justfile  game_log.p8l  toy-train.p8
tutorials/: gamestates.p8
tutorials/particles/: particles.p8
wasm4/icefall/: .gitignore  Cargo.toml  Justfile  README.md  build.rs
wasm4/sokobice/: .gitignore  Cargo.toml  Justfile
wasm4/sokobice/assets/sprites/: background1.aseprite  player.aseprite  title_background.aseprite
wasm4/sokobice/src/: constants.rs  lib.rs  scene_manager.rs
wasm4/sokobice/src/common/: mod.rs  snowflakes.rs  vector2d.rs
wasm4/sokobice/src/scenes/: mod.rs
wasm4/sokobice/src/scenes/game_scene/: mod.rs  player.rs
wasm4/sokobice/src/scenes/intro_scene/: mod.rs  snowflakes.rs
wasm4/sokobice/src/w4utils/: controller.rs  graphics.rs
wasm4/sokobice/w4utils/src/graphics/: core.rs  mod.rs  shapes.rs
wasm4/w4-exp/: .gitignore  build.rs
(+327 files in other folders)
